editable footer buttons missalignment fix

--- a/z-economy/src/app/components/tables/transactions/renders/Table.module.scss
+++ b/z-economy/src/app/components/tables/transactions/renders/Table.module.scss
@@ -105,5 +105,6 @@
     height: 40px;
     border: 1px none;
     border-bottom: 1px solid const.$page-light-border-color;
+    padding-right: functions.spacing(4);
   }
 }
